--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.5.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.3.27",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.5",
