--- a/package.json
+++ b/package.json
@@ -9,14 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-three/drei": "^9.120.4",
-    "@react-three/fiber": "^8.17.10",
-    "@tabler/icons-react": "^3.26.0",
-    "@tsparticles/engine": "^3.7.1",
-    "@tsparticles/react": "^3.0.0",
-    "@tsparticles/slim": "^3.7.1",
     "clsx": "^2.1.1",
-    "firebase": "^11.1.0",
     "framer-motion": "^11.15.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "^15.1.3",
@@ -25,20 +18,14 @@
     "react-dom": "^18",
     "react-icon-cloud": "^4.1.6",
     "react-icons": "^5.4.0",
-    "react-lottie": "^1.2.10",
     "tailwind-merge": "^2.6.0",
-    "tailwindcss-animate": "^1.0.7",
-    "three": "^0.171.0",
-    "three-globe": "^2.39.1"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
+    "@types/node": "22.10.2",
     "@types/react-dom": "^19.0.2",
-    "@types/react-lottie": "^1.2.10",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
-    "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
