--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.8.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.9.2",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
     "react": "^19.1.0",
