--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.5",
     "clsx": "^2.1.1",
+    "firebase-admin": "^13.3.0",
+    "firebase-functions": "^6.3.2",
     "framer-motion": "^12.8.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.9.2",
     "next": "^15.1.3",
     "next-themes": "^0.4.4",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icon-cloud": "^4.1.6",
@@ -23,9 +28,12 @@
   },
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@types/node-fetch": "^2.6.12",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-dom": "^19.0.2",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
+    "nodemailer": "^6.10.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.7.2"
   }
