--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "clsx": "^2.1.1",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
+    "firebase": "11.7.3"
     "framer-motion": "^12.8.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.9.2",
