--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -18,6 +18,8 @@ jobs:
         with:
           repoToken: ${{ secrets.GITHUB_TOKEN }}
           firebaseServiceAccount: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_THEPAYNETRAIN_COM }}
+          expires: 5d
+          channelId: preview
           projectId: thepaynetrain-com
         env:
           FIREBASE_CLI_EXPERIMENTS: webframeworks
