--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.5",
+    "@tailwindcss/postcss": "^4.1.14",
     "clsx": "^2.1.1",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^6.3.2",
@@ -23,18 +24,23 @@
     "react-dom": "^19.1.0",
     "react-icon-cloud": "^4.1.6",
     "react-icons": "^5.4.0",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/node": "^22.14.1",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.7.2",
     "@types/node-fetch": "^2.6.12",
-    "@types/nodemailer": "^6.4.17",
+    "@types/nodemailer": "^7.0.2",
     "@types/react-dom": "^19.0.2",
     "eslint": "^9.17.0",
     "eslint-config-next": "^15.1.3",
-    "nodemailer": "^6.10.1",
-    "tailwindcss": "^3.4.17",
+    "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
+    "nodemailer": "^7.0.9",
+    "tailwindcss": "^4.1.14",
     "typescript": "^5.7.2"
   }
 }
