--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/app": "^0.14.6",
+    "@next/third-parties": "^16.0.5",
     "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/postcss": "^4.1.14",
     "clsx": "^2.1.1",
+    "firebase": "^12.6.0",
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^7.0.0",
     "framer-motion": "^12.8.0",
