--- a/firebase.json
+++ b/firebase.json
@@ -13,36 +13,10 @@
   "storage": {
     "rules": "storage.rules"
   },
-  "functions": [
-    {
-      "codebase": "default",
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"],
-      "source": "functions"
-    },
-    {
-      "source": "api",
-      "codebase": "api",
-      "disallowLegacyRuntimeConfig": true,
-      "ignore": [
-        "node_modules",
-        ".git",
-        "firebase-debug.log",
-        "firebase-debug.*.log",
-        "*.local"
-      ],
-      "predeploy": [
-        "npm --prefix \"$RESOURCE_DIR\" run lint",
-        "npm --prefix \"$RESOURCE_DIR\" run build"
-      ]
-    }
-  ],
+  "functions": {
+    "source": "api",
+    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
+  },
   "emulators": {
     "functions": {
       "port": 5001
