--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@azure/identity": "^4.13.0",
     "@firebase/app": "^0.14.6",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@next/third-parties": "^16.0.5",
     "@sendgrid/mail": "^8.1.5",
     "@tailwindcss/postcss": "^4.1.14",
@@ -18,6 +20,7 @@
     "firebase-admin": "^13.3.0",
     "firebase-functions": "^7.0.0",
     "framer-motion": "^12.8.0",
+    "isomorphic-fetch": "^3.0.0",
     "mini-svg-data-uri": "^1.4.4",
     "motion": "^12.9.2",
     "next": "^16.0.3",
@@ -31,6 +34,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@microsoft/microsoft-graph-types": "^2.43.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
